Working version with 2 demo testcases
add folder for new tests, configure task that runs them

add dummy test to newTest directory

WIP: IT framework for OpenSearch Security

WIP renamed ITRestClient

WIP added test certificates for local cluster start

WIP LocalCluster startup fixed, Authc config fixed

WIP cleanup

WIP add test index creation on cluster startup

WIP more cleanup, fixed SSL connection issues

working version, added 2 initial tests

Signed-Off-By: Jochen Kressin <jkressin@floragunn.com>

--- a/build.gradle
+++ b/build.gradle
@@ -234,6 +234,15 @@ sourceSets {
         compileClasspath += sourceSets.main.output
         runtimeClasspath += sourceSets.main.output
         force "io.netty:netty-transport-native-unix-common:${versions.netty}"
+        }
+}
+
+//create source set 'newTest'
+//add classes from the main source set to the compilation and runtime classpaths of the newTest
+sourceSets {
+    newTest {
+        compileClasspath += sourceSets.main.output
+        runtimeClasspath += sourceSets.main.output
     }
 }
 
