Force netty-transport-native-unix-common version (#1945)
Signed-off-by: Craig Perkins <cwperx@amazon.com>

--- a/build.gradle
+++ b/build.gradle
@@ -233,6 +233,7 @@ sourceSets {
     newTest {
         compileClasspath += sourceSets.main.output
         runtimeClasspath += sourceSets.main.output
+        force "io.netty:netty-transport-native-unix-common:${versions.netty}"
     }
 }
 
