--- a/build.gradle
+++ b/build.gradle
@@ -224,8 +224,49 @@ configurations.all {
         force "io.netty:netty-common:${versions.netty}"
         force "io.netty:netty-handler:${versions.netty}"
         force "io.netty:netty-transport:${versions.netty}"
-        force "io.netty:netty-transport-native-unix-common:${versions.netty}"
+        }
+}
+
+//create source set 'newTest'
+//add classes from the main source set to the compilation and runtime classpaths of the newTest
+sourceSets {
+    newTest {
+        compileClasspath += sourceSets.main.output
+        runtimeClasspath += sourceSets.main.output
     }
+}
+
+//add new task that runs new tests
+task newTest(type: Test) {
+    description = 'Run new tests.'
+    group = 'verification'
+    testClassesDirs = sourceSets.newTest.output.classesDirs
+    classpath = sourceSets.newTest.runtimeClasspath
+
+    //run the newTest task after the test task
+    shouldRunAfter test
+}
+
+//run the newTest task before the check task
+check.dependsOn newTest
+
+configurations {
+    all {
+        resolutionStrategy {
+            force 'commons-codec:commons-codec:1.14'
+            force 'org.apache.santuario:xmlsec:2.2.3'
+            force 'org.cryptacular:cryptacular:1.2.4'
+            force 'net.minidev:json-smart:2.4.7'
+            force 'commons-cli:commons-cli:1.3.1'
+            force 'org.apache.httpcomponents:httpcore:4.4.12'
+            force "org.apache.commons:commons-lang3:3.4"
+            force "org.springframework:spring-core:5.3.20"
+            force "com.google.guava:guava:30.0-jre"
+        }
+    }
+
+    //use testImplementation dependencies in the newTestImplementation configuration
+    newTestImplementation.extendsFrom testImplementation
 }
 
 dependencies {
