--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ buildscript {
         if (isSnapshot) {
             opensearch_build += "-SNAPSHOT"
         }
+        bouncycastle_version = "1.71"
     }
 
     repositories {
@@ -274,7 +275,7 @@ dependencies {
     implementation 'com.google.guava:guava:30.0-jre'
     implementation 'org.greenrobot:eventbus:3.2.0'
     implementation 'commons-cli:commons-cli:1.3.1'
-    implementation 'org.bouncycastle:bcprov-jdk15on:1.67'
+    implementation "org.bouncycastle:bcprov-jdk18on:${bouncycastle_version}"
     implementation 'org.ldaptive:ldaptive:1.2.3'
     implementation 'org.apache.httpcomponents:httpclient-cache:4.5.13'
     implementation 'io.jsonwebtoken:jjwt-api:0.10.8'
@@ -303,6 +304,9 @@ dependencies {
     runtimeOnly 'org.ow2.asm:asm:9.1'
 
     testImplementation 'org.apache.camel:camel-xmlsecurity:3.14.2'
+    testImplementation "org.bouncycastle:bcpkix-jdk18on:${bouncycastle_version}"
+    testImplementation "org.bouncycastle:bcutil-jdk18on:${bouncycastle_version}"
+
 
     implementation 'net.shibboleth.utilities:java-support:7.5.1'
     implementation 'org.opensaml:opensaml-core:3.4.5'
@@ -328,7 +332,8 @@ dependencies {
     implementation 'net.minidev:json-smart:2.4.7'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.10.8'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.10.8'
-    runtimeOnly 'com.google.guava:failureaccess:1.0.1'
+//    runtimeOnly 'com.google.guava:failureaccess:1.0.1'
+    testImplementation 'com.google.guava:failureaccess:1.0.1'
     runtimeOnly 'org.apache.commons:commons-text:1.2'
     runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:2.3.4'
     runtimeOnly 'com.google.j2objc:j2objc-annotations:1.3'
