--- a/src/test/resources/log4j2-test.properties
+++ b/src/test/resources/log4j2-test.properties
@@ -13,7 +13,7 @@ appender.file.layout.type=PatternLayout
 appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
 
-rootLogger.level = warn
+rootLogger.level = info
 rootLogger.appenderRef.console.ref = console
 rootLogger.appenderRef.file.ref = LOGFILE
 
@@ -24,7 +24,7 @@ rootLogger.appenderRef.file.ref = LOGFILE
 #logger.pe.level = trace
 
 logger.cas.name = org.opensearch.cluster.service.ClusterApplierService
-logger.cas.level = error
+logger.cas.level = info
 
 #logger.ncs.name = org.opensearch.cluster.NodeConnectionsService
 #logger.ncs.level = off
