--- a/build.gradle
+++ b/build.gradle
@@ -304,8 +304,6 @@ dependencies {
     runtimeOnly 'org.ow2.asm:asm:9.1'
 
     testImplementation 'org.apache.camel:camel-xmlsecurity:3.14.2'
-    testImplementation "org.bouncycastle:bcpkix-jdk18on:${bouncycastle_version}"
-    testImplementation "org.bouncycastle:bcutil-jdk18on:${bouncycastle_version}"
 
 
     implementation 'net.shibboleth.utilities:java-support:7.5.1'
@@ -332,8 +330,7 @@ dependencies {
     implementation 'net.minidev:json-smart:2.4.7'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.10.8'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.10.8'
-//    runtimeOnly 'com.google.guava:failureaccess:1.0.1'
-    testImplementation 'com.google.guava:failureaccess:1.0.1'
+    runtimeOnly 'com.google.guava:failureaccess:1.0.1'
     runtimeOnly 'org.apache.commons:commons-text:1.2'
     runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:2.3.4'
     runtimeOnly 'com.google.j2objc:j2objc-annotations:1.3'
@@ -405,6 +402,8 @@ dependencies {
     newTestImplementation 'commons-io:commons-io:2.7'
     newTestImplementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     newTestImplementation 'org.hamcrest:hamcrest:2.1'
+    newTestImplementation "org.bouncycastle:bcpkix-jdk18on:${bouncycastle_version}"
+    newTestImplementation "org.bouncycastle:bcutil-jdk18on:${bouncycastle_version}"
 }
 
 jar {
