--- a/src/integrationTest/resources/log4j2-test.properties
+++ b/src/integrationTest/resources/log4j2-test.properties
@@ -1,10 +1,16 @@
 status = info
 name = Integration test logging configuration
 
+
+
 appender.console.type = Console
 appender.console.name = consoleLogger
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %threadName %-5p %c{1}:%L - %m%n
+appender.console.filter.prerelease.type=RegexFilter
+appender.console.filter.prerelease.regex=.+\\Qis a pre-release version of OpenSearch and is not suitable for production\\E
+appender.console.filter.prerelease.onMatch=DENY
+appender.console.filter.prerelease.onMismatch=NEUTRAL
 
 rootLogger.level = warn
 rootLogger.appenderRef.stdout.ref = consoleLogger
