LDAP authentication tests.
Signed-off-by: Lukasz Soszynski <lukasz.soszynski@eliatra.com>

--- a/src/integrationTest/resources/log4j2-test.properties
+++ b/src/integrationTest/resources/log4j2-test.properties
@@ -19,3 +19,10 @@ logger.testsecconfig.name=org.opensearch.test.framework.TestSecurityConfig
 logger.testsecconfig.level = info
 logger.localopensearchcluster.name=org.opensearch.test.framework.cluster.LocalOpenSearchCluster
 logger.localopensearchcluster.level = info
+# com.amazon.dlic.auth.ldap.backend.LDAPAuthorizationBackend
+
+logger.ldap.name=com.amazon.dlic.auth.ldap.backend.LDAPAuthorizationBackend
+logger.ldap.level=TRACE
+
+logger.testframework.name=org.opensearch.test.framework
+logger.testframework.level=DEBUG
